--- a/package.json
+++ b/package.json
@@ -28,12 +28,8 @@
     "stories:build:docs": "yarn run stories:build --docs",
     "stories:dev": "start-storybook --config-dir stories --port 6006 --no-open",
     "stories:dev:docs": "yarn run stories:dev --docs",
-    "test": "cross-env NODE_OPTIONS='--experimental-vm-modules' jest --config ./test/jest.config.js",
-    "test:ci": "yarn run test --ci",
-    "test:coverage": "yarn run test --coverage",
-    "test:watch": "yarn run test --watch",
     "typecheck": "tsc -p tsconfig.json --noEmit",
-    "validate": "yarn run format && yarn run lint && yarn run typecheck && yarn run test"
+    "validate": "yarn run format && yarn run lint && yarn run typecheck"
   },
   "packageManager": "yarn@1.22.22",
   "engines": {
@@ -161,7 +157,6 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.1",
     "@faker-js/faker": "^6.1.1",
-    "@jest/types": "^27.5.1",
     "@mswjs/data": "^0.9.2",
     "@next/eslint-plugin-next": "^12.1.6",
     "@react-types/button": "^3.4.2",
@@ -189,11 +184,6 @@
     "@storybook/builder-webpack5": "^6.4.19",
     "@storybook/manager-webpack5": "^6.4.19",
     "@storybook/react": "^6.4.19",
-    "@testing-library/dom": "^8.11.1",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/react-hooks": "^7.0.2",
-    "@testing-library/user-event": "^14.0.0",
     "@types/final-form-focus": "^1.1.2",
     "@types/final-form-set-field-data": "^1.0.0",
     "@types/final-form-set-field-touched": "^1.0.0",
@@ -209,10 +199,6 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.9.0",
     "eslint-plugin-storybook": "^0.5.7",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.5.1",
-    "jest-environment-jsdom": "^27.5.1",
-    "jest-watch-typeahead": "^1.0.0",
     "jose": "^4.3.8",
     "lint-staged": "^12.1.7",
     "match-sorter": "^6.3.1",
@@ -224,7 +210,6 @@
     "postcss-custom-media": "^8.0.0",
     "postcss-nesting": "^10.1.2",
     "prettier": "^2.6.0",
-    "react-test-renderer": "^17.0.2",
     "remark-cli": "^10.0.1",
     "remark-frontmatter": "^4.0.1",
     "remark-mdx": "^2.1.0",
