--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "build": "next build",
     "cms:server": "netlify-cms-proxy-server",
     "dev": "next dev",
-    "format": "prettier . \"!**/*.mdx\" --list-different --ignore-path .gitignore",
-    "format:fix": "yarn run format --write",
+    "format:check": "prettier . \"!**/*.mdx\" --list-different",
+    "format:fix": "yarn run format:check --write",
     "generate:route-manifest": "ts-script scripts/generate-route-manifest.ts",
-    "lint": "run-p lint:*:check",
-    "lint:fix": "run-p lint:*:fix",
+    "lint:check": "run-p \"lint:*:check\"",
+    "lint:fix": "run-p lint:*:fix\"",
     "lint:code:check": "next lint --dir . --ignore-path .gitignore",
     "lint:code:fix": "yarn run lint:code:check --fix",
     "lint:md:check": "remark . --ext md --quiet --frail",
@@ -29,8 +29,8 @@
     "prebuild": "yarn run generate:route-manifest",
     "prepare": "simple-git-hooks || true",
     "start": "next start",
-    "typecheck": "tsc -p tsconfig.json --noEmit",
-    "validate": "yarn run format && yarn run lint && yarn run typecheck"
+    "types:check": "tsc -p tsconfig.json --noEmit",
+    "validate": "yarn run format:check && yarn run lint:check && yarn run types:check"
   },
   "dependencies": {
     "@mdx-js/loader": "^2.1.0",
@@ -196,7 +196,7 @@
     "postcss": "^8.4.5",
     "postcss-custom-media": "^8.0.0",
     "postcss-nesting": "^10.1.2",
-    "prettier": "^2.6.0",
+    "prettier": "^3.5.2",
     "remark-cli": "^10.0.1",
     "remark-frontmatter": "^4.0.1",
     "remark-mdx": "^2.1.0",
