--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "analyze-bundle": "cross-env BUNDLE_ANALYZER=enabled next build",
     "build": "next build",
-    "cms:server": "decap-server",
+    "cms:server": "netlify-cms-proxy-server",
     "dev": "next dev",
     "format:check": "prettier . \"!**/*.mdx\" --list-different",
     "format:fix": "yarn run format:check --write",
@@ -79,7 +79,7 @@
     "@stefanprobst/is-nonempty-array": "^1.0.1",
     "@stefanprobst/is-nonempty-string": "^1.0.1",
     "@stefanprobst/log": "^1.0.3",
-    "@stefanprobst/netlify-cms-oauth-client": "0.1.3",
+    "@stefanprobst/netlify-cms-oauth-client": "^0.1.3",
     "@stefanprobst/next-error-boundary": "legacy",
     "@stefanprobst/next-i18n": "legacy",
     "@stefanprobst/next-page-metadata": "legacy",
@@ -114,7 +114,7 @@
     "js-yaml": "^4.1.0",
     "jwt-decode": "^3.1.2",
     "mdast-util-to-string": "^3.1.0",
-    "decap-cms-app": "^3.6.2",
+    "netlify-cms-app": "^2.15.72",
     "next": "^13.5.8",
     "nodemailer": "^6.7.2",
     "patch-package": "^6.4.7",
@@ -179,12 +179,12 @@
     "@types/sharp": "^0.29.5",
     "autoprefixer": "^10.4.2",
     "cross-env": "^7.0.3",
-    "decap-server": "^3.2.0",
     "eslint": "^8.9.0",
     "jose": "^4.3.8",
     "lint-staged": "^12.1.7",
     "match-sorter": "^6.3.1",
     "msw": "^0.39.2",
+    "netlify-cms-proxy-server": "^1.3.23",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.5",
     "postcss-custom-media": "^8.0.0",
