--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"@acdh-oeaw/mdx-lib": "^0.1.3",
 		"@acdh-oeaw/style-variants": "^0.1.0",
 		"@acdh-oeaw/validate-env": "^0.0.3",
+		"@keystar/ui": "^0.7.18",
 		"@keystatic/core": "^0.5.46",
 		"@keystatic/next": "^5.0.4",
 		"@opentelemetry/api": "^1.9.0",
@@ -50,6 +51,7 @@
 		"@opentelemetry/sdk-logs": "^0.57.2",
 		"@react-aria/utils": "^3.28.1",
 		"@sentry/nextjs": "^9.9.0",
+		"@shikijs/rehype": "^3.2.1",
 		"@valibot/i18n": "^1.0.0",
 		"@vercel/otel": "^1.10.4",
 		"client-only": "^0.0.1",
@@ -65,8 +67,14 @@
 		"react-dom": "^19.0.0",
 		"react-schemaorg": "^2.0.0",
 		"react-stately": "^3.36.1",
+		"rehype-slug": "^6.0.0",
+		"remark-frontmatter": "^5.0.0",
+		"remark-gfm": "^4.0.1",
+		"remark-mdx-frontmatter": "^5.1.0",
+		"remark-smartypants": "^3.0.2",
 		"server-only": "^0.0.1",
 		"sharp": "^0.33.5",
+		"shiki": "^3.2.1",
 		"swr": "^2.3.3",
 		"valibot": "^1.0.0"
 	},
@@ -85,6 +93,8 @@
 		"@react-aria/optimize-locales-plugin": "^1.1.4",
 		"@react-types/shared": "^3.28.0",
 		"@tailwindcss/postcss": "^4.0.15",
+		"@types/hast": "^3.0.4",
+		"@types/mdx": "^2.0.13",
 		"@types/node": "^22.13.13",
 		"@types/nodemailer": "^6.4.17",
 		"@types/react": "^19.0.12",
