--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"client-only": "^0.0.1",
 		"fast-glob": "^3.3.3",
 		"image-dimensions": "^2.3.0",
+		"is-network-error": "^1.1.0",
 		"jose": "^6.0.10",
 		"lucide-react": "^0.484.0",
 		"next": "canary",
