--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"dev:email-service:up": "docker compose --env-file=./.env.local up --detach",
 		"format:check": "prettier . \"!./@(content|public)/**\" --cache --cache-location ./.prettiercache --check",
 		"format:fix": "pnpm run format:check --write",
+		"generate:api-client": "dotenv -c -- tsx ./scripts/generate-api-client.ts",
 		"generate:i18n-message-types": "tsx ./scripts/generate-i18n-message-types.ts",
 		"lint:check": "run-p --continue-on-error \"lint:*:check\"",
 		"lint:fix": "run-p --continue-on-error \"lint:*:fix\"",
@@ -24,7 +25,7 @@
 		"lint:styles:check": "stylelint \"./**/*.css\" --cache --ignore-path ./.gitignore",
 		"lint:styles:fix": "pnpm run lint:styles:check --fix",
 		"preinstall": "npx only-allow pnpm",
-		"prepare": "run-s setup generate:i18n-message-types",
+		"prepare": "run-s setup generate:i18n-message-types generate:api-client",
 		"setup": "is-ci || simple-git-hooks",
 		"start": "next start",
 		"test": "exit 0",
@@ -42,6 +43,7 @@
 		"@acdh-oeaw/mdx-lib": "^0.1.3",
 		"@acdh-oeaw/style-variants": "^0.1.0",
 		"@acdh-oeaw/validate-env": "^0.0.3",
+		"@hey-api/client-fetch": "^0.9.0",
 		"@keystar/ui": "^0.7.18",
 		"@keystatic/core": "^0.5.46",
 		"@keystatic/next": "^5.0.4",
@@ -90,6 +92,7 @@
 		"@acdh-oeaw/prettier-config": "^2.0.1",
 		"@acdh-oeaw/stylelint-config": "^2.1.2",
 		"@acdh-oeaw/tsconfig": "^1.5.1",
+		"@hey-api/openapi-ts": "^0.66.0",
 		"@next/bundle-analyzer": "canary",
 		"@next/eslint-plugin-next": "canary",
 		"@playwright/test": "^1.51.1",
