--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
 		"@acdh-oeaw/mdx-lib": "^0.1.3",
 		"@acdh-oeaw/style-variants": "^0.1.0",
 		"@acdh-oeaw/validate-env": "^0.0.3",
-		"@hey-api/client-fetch": "^0.9.0",
 		"@keystar/ui": "^0.7.18",
 		"@keystatic/core": "^0.5.46",
 		"@keystatic/next": "^5.0.4",
@@ -92,7 +91,6 @@
 		"@acdh-oeaw/prettier-config": "^2.0.1",
 		"@acdh-oeaw/stylelint-config": "^2.1.2",
 		"@acdh-oeaw/tsconfig": "^1.5.1",
-		"@hey-api/openapi-ts": "^0.66.0",
 		"@next/bundle-analyzer": "canary",
 		"@next/eslint-plugin-next": "canary",
 		"@playwright/test": "^1.51.1",
@@ -118,6 +116,7 @@
 		"is-ci": "^4.1.0",
 		"lint-staged": "^15.5.0",
 		"npm-run-all2": "^7.0.2",
+		"openapi-typescript": "^7.6.1",
 		"postcss": "^8.5.3",
 		"prettier": "^3.5.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
