--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 		"is-network-error": "^1.1.0",
 		"jose": "^6.0.10",
 		"lucide-react": "^0.484.0",
+		"mdast-util-to-markdown": "^2.1.2",
 		"next": "canary",
 		"next-intl": "^4.0.2",
 		"nodemailer": "^6.10.0",
@@ -75,11 +76,14 @@
 		"remark-frontmatter": "^5.0.0",
 		"remark-gfm": "^4.0.1",
 		"remark-mdx-frontmatter": "^5.1.0",
+		"remark-parse": "^11.0.0",
 		"remark-smartypants": "^3.0.2",
 		"server-only": "^0.0.1",
 		"sharp": "^0.33.5",
 		"shiki": "^3.2.1",
+		"strip-markdown": "^6.0.0",
 		"swr": "^2.3.3",
+		"unified": "^11.0.5",
 		"valibot": "^1.0.0"
 	},
 	"devDependencies": {
@@ -98,6 +102,7 @@
 		"@react-types/shared": "^3.28.0",
 		"@tailwindcss/postcss": "^4.1.2",
 		"@types/hast": "^3.0.4",
+		"@types/mdast": "^4.0.4",
 		"@types/mdx": "^2.0.13",
 		"@types/node": "^22.14.0",
 		"@types/nodemailer": "^6.4.17",
