--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
 	"include": [
 		"./**/*.d.ts",
 		"./**/*.js",
-		// "./**/*.mdx",
+		"./**/*.mdx",
 		"./**/*.ts",
 		"./**/*.tsx",
 		".next/types/**/*.ts"
