--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
 		"@opentelemetry/instrumentation": "^0.200.0",
 		"@opentelemetry/sdk-logs": "^0.200.0",
 		"@react-aria/utils": "^3.28.2",
-		"@sentry/nextjs": "^9.12.0",
+		"@sentry/nextjs": "^9.13.0",
 		"@shikijs/rehype": "^3.2.2",
 		"@sindresorhus/slugify": "^2.2.1",
 		"@valibot/i18n": "^1.0.0",
@@ -66,6 +66,7 @@
 		"next": "canary",
 		"next-intl": "^4.0.2",
 		"nodemailer": "^6.10.1",
+		"p-debounce": "^4.0.0",
 		"react": "^19.1.0",
 		"react-aria": "^3.39.0",
 		"react-aria-components": "^1.8.0",
@@ -97,7 +98,7 @@
 		"@acdh-oeaw/tsconfig": "^1.5.1",
 		"@next/bundle-analyzer": "canary",
 		"@next/eslint-plugin-next": "canary",
-		"@playwright/test": "^1.51.1",
+		"@playwright/test": "^1.52.0",
 		"@react-aria/optimize-locales-plugin": "^1.1.4",
 		"@react-types/shared": "^3.29.0",
 		"@tailwindcss/postcss": "^4.1.4",
@@ -113,7 +114,7 @@
 		"ci-info": "^4.2.0",
 		"dotenv": "^16.5.0",
 		"dotenv-cli": "^8.0.0",
-		"dotenv-expand": "^12.0.1",
+		"dotenv-expand": "^12.0.2",
 		"eslint": "^9.24.0",
 		"eslint-config-flat-gitignore": "^2.1.0",
 		"eslint-plugin-check-file": "^3.2.0",
