--- a/package.json
+++ b/package.json
@@ -69,15 +69,17 @@
 		"p-debounce": "^4.0.0",
 		"react": "^19.1.0",
 		"react-aria": "^3.39.0",
-		"react-aria-components": "^1.8.0",
+		"react-aria-components": "nightly",
 		"react-dom": "^19.1.0",
 		"react-schemaorg": "^2.0.0",
 		"react-stately": "^3.37.0",
+		"rehype-react": "^8.0.0",
 		"rehype-slug": "^6.0.0",
 		"remark-frontmatter": "^5.0.0",
 		"remark-gfm": "^4.0.1",
 		"remark-mdx-frontmatter": "^5.1.0",
 		"remark-parse": "^11.0.0",
+		"remark-rehype": "^11.1.2",
 		"remark-smartypants": "^3.0.2",
 		"server-only": "^0.0.1",
 		"sharp": "^0.34.1",
@@ -89,7 +91,7 @@
 	},
 	"devDependencies": {
 		"@acdh-oeaw/eslint-config": "^2.0.9",
-		"@acdh-oeaw/eslint-config-next": "^2.0.16",
+		"@acdh-oeaw/eslint-config-next": "^2.0.17",
 		"@acdh-oeaw/eslint-config-node": "^2.0.9",
 		"@acdh-oeaw/eslint-config-playwright": "^2.0.10",
 		"@acdh-oeaw/eslint-config-react": "^2.0.11",
@@ -100,7 +102,6 @@
 		"@next/eslint-plugin-next": "canary",
 		"@playwright/test": "^1.52.0",
 		"@react-aria/optimize-locales-plugin": "^1.1.4",
-		"@react-types/shared": "^3.29.0",
 		"@tailwindcss/postcss": "^4.1.4",
 		"@types/hast": "^3.0.4",
 		"@types/mdast": "^4.0.4",
@@ -115,7 +116,7 @@
 		"dotenv": "^16.5.0",
 		"dotenv-cli": "^8.0.0",
 		"dotenv-expand": "^12.0.2",
-		"eslint": "^9.24.0",
+		"eslint": "^9.25.0",
 		"eslint-config-flat-gitignore": "^2.1.0",
 		"eslint-plugin-check-file": "^3.2.0",
 		"globals": "^16.0.0",
