--- a/package.json
+++ b/package.json
@@ -85,7 +85,6 @@
 		"sharp": "^0.34.1",
 		"shiki": "^3.2.2",
 		"strip-markdown": "^6.0.0",
-		"swr": "^2.3.3",
 		"unified": "^11.0.5",
 		"valibot": "^1.0.0"
 	},
@@ -111,6 +110,7 @@
 		"@types/nodemailer": "^6.4.17",
 		"@types/react": "^19.1.2",
 		"@types/react-dom": "^19.1.2",
+		"@typescript-eslint/utils": "^8.30.1",
 		"axe-core": "^4.10.3",
 		"axe-playwright": "^2.1.0",
 		"ci-info": "^4.2.0",
@@ -133,6 +133,7 @@
 		"stylelint": "^16.18.0",
 		"tailwindcss": "^4.1.4",
 		"tailwindcss-react-aria-components": "^2.0.0",
+		"ts-morph": "^25.0.1",
 		"tsx": "^4.19.3",
 		"typescript": "^5.8.3",
 		"typescript-eslint": "^8.30.1"
