--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"node": "22.x",
 		"pnpm": "10.x"
 	},
-	"packageManager": "pnpm@10.8.1",
+	"packageManager": "pnpm@10.9.0",
 	"scripts": {
 		"analyze": "BUNDLE_ANALYZER=\"enabled\" next build --no-lint",
 		"build": "next build",
@@ -39,7 +39,7 @@
 	},
 	"dependencies": {
 		"@acdh-oeaw/keystatic-lib": "^0.6.1",
-		"@acdh-oeaw/lib": "^0.3.1",
+		"@acdh-oeaw/lib": "^0.3.2",
 		"@acdh-oeaw/mdx-lib": "^0.1.3",
 		"@acdh-oeaw/style-variants": "^0.1.0",
 		"@acdh-oeaw/validate-env": "^0.0.3",
@@ -63,9 +63,11 @@
 		"jose": "^6.0.10",
 		"lucide-react": "^0.488.0",
 		"mdast-util-to-markdown": "^2.1.2",
+		"neverthrow": "^8.2.0",
 		"next": "canary",
 		"next-intl": "^4.0.2",
 		"nodemailer": "^6.10.1",
+		"openapi-fetch": "^0.13.5",
 		"p-debounce": "^4.0.0",
 		"react": "^19.1.0",
 		"react-aria": "^3.39.0",
@@ -101,6 +103,7 @@
 		"@next/eslint-plugin-next": "canary",
 		"@playwright/test": "^1.52.0",
 		"@react-aria/optimize-locales-plugin": "^1.1.4",
+		"@redocly/openapi-core": "^1.34.2",
 		"@tailwindcss/postcss": "^4.1.4",
 		"@tailwindcss/typography": "^0.5.16",
 		"@types/hast": "^3.0.4",
