--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
 		"@opentelemetry/sdk-logs": "^0.57.2",
 		"@react-aria/utils": "^3.28.2",
 		"@sentry/nextjs": "^9.13.0",
-		"@shikijs/rehype": "^3.2.2",
+		"@shikijs/rehype": "^3.3.0",
 		"@sindresorhus/slugify": "^2.2.1",
 		"@valibot/i18n": "^1.0.0",
 		"@vercel/otel": "^1.11.0",
@@ -85,17 +85,17 @@
 		"remark-smartypants": "^3.0.2",
 		"server-only": "^0.0.1",
 		"sharp": "^0.34.1",
-		"shiki": "^3.2.2",
+		"shiki": "^3.3.0",
 		"strip-markdown": "^6.0.0",
 		"unified": "^11.0.5",
 		"valibot": "^1.0.0"
 	},
 	"devDependencies": {
 		"@acdh-oeaw/eslint-config": "^2.0.9",
-		"@acdh-oeaw/eslint-config-next": "^2.0.17",
+		"@acdh-oeaw/eslint-config-next": "^2.0.19",
 		"@acdh-oeaw/eslint-config-node": "^2.0.9",
 		"@acdh-oeaw/eslint-config-playwright": "^2.0.10",
-		"@acdh-oeaw/eslint-config-react": "^2.0.11",
+		"@acdh-oeaw/eslint-config-react": "^2.0.13",
 		"@acdh-oeaw/prettier-config": "^2.0.1",
 		"@acdh-oeaw/stylelint-config": "^2.1.2",
 		"@acdh-oeaw/tsconfig": "^1.5.1",
@@ -113,14 +113,15 @@
 		"@types/nodemailer": "^6.4.17",
 		"@types/react": "^19.1.2",
 		"@types/react-dom": "^19.1.2",
-		"@typescript-eslint/utils": "^8.30.1",
+		"@typescript-eslint/utils": "^8.31.0",
 		"axe-core": "^4.10.3",
 		"axe-playwright": "^2.1.0",
+		"babel-plugin-react-compiler": "19.1.0-rc.1",
 		"ci-info": "^4.2.0",
 		"dotenv": "^16.5.0",
 		"dotenv-cli": "^8.0.0",
 		"dotenv-expand": "^12.0.2",
-		"eslint": "^9.25.0",
+		"eslint": "^9.25.1",
 		"eslint-config-flat-gitignore": "^2.1.0",
 		"eslint-plugin-check-file": "^3.2.0",
 		"globals": "^16.0.0",
@@ -138,7 +139,7 @@
 		"tailwindcss-react-aria-components": "^2.0.0",
 		"tsx": "^4.19.3",
 		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.30.1"
+		"typescript-eslint": "^8.31.0"
 	},
 	"browserslist": {
 		"development": [
