--- a/package.json
+++ b/package.json
@@ -184,19 +184,19 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.9.0",
     "jose": "^4.3.8",
-    "lint-staged": "^12.1.7",
+    "lint-staged": "^15.5.1",
     "match-sorter": "^6.3.1",
     "msw": "^0.39.2",
     "netlify-cms-proxy-server": "^1.3.23",
-    "npm-run-all": "^4.1.5",
+    "npm-run-all2": "^7.0.2",
     "postcss": "^8.4.5",
     "postcss-custom-media": "^8.0.0",
     "postcss-nesting": "^10.1.2",
-    "prettier": "^3.5.2",
+    "prettier": "^3.5.3",
     "remark-cli": "^10.0.1",
     "remark-frontmatter": "^4.0.1",
     "remark-mdx": "^2.1.0",
-    "simple-git-hooks": "^2.7.0",
+    "simple-git-hooks": "^2.13.0",
     "strip-indent": "^4.0.0",
     "stylelint": "^14.6.0",
     "typescript": "^4.6.2"
